--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -94,7 +94,7 @@
 %%             state={},
 %%             country={}}
 
-\author{Tatiana Balbi Fraga, Regilda da Costa e Silva Menêzes and Marcos Luiz Henrique}
+\author{Tatiana Balbi Fraga and Regilda da Costa e Silva Menêzes}
 
 \affiliation{organization={Centro Acadêmico do Agreste - Universidade Federal de Pernambuco},
              addressline={Avenida Marielle Franco, Bairro Nova Caruaru},
@@ -545,7 +545,7 @@ Table X presents a comparison of the results obtained by applying the analytical
 \section{Contributions}
 \label{sec:contributions}
 
-The work for the elaboration of this paper is being carried out by three professors, as described below. Professor Fraga, T.B., was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for the analytical solution, developing benchmarks, and testing the analytical method and the solver in C++, as well as surveying bibliography and elaboration of the paper. Professor Henrique, M. L. is developing a solver in LINGO for testing and validating the model. Professor Menezes, R. D. C. S. is contributing to the bibliographic survey and to writing the bibliographic review presented in the paper. 
+The work for the elaboration of this paper is being carried out by two professors, as described below. Professor Fraga, T.B., was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for the analytical solution, developing benchmarks, and testing the analytical method and the solver in C++, as well as surveying bibliography and elaboration of the paper. Professor Menezes, R. D. C. S. is contributing to the bibliographic survey and to writing the bibliographic review presented in the paper. 
 
 \section{Acknowledgments}
 \label{sec:acknowledgments}
